remove testing css

--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -47,7 +47,7 @@ button:hover {
   input {
     padding: 0 8px;
     // add this for testing, as plugin should be able to cope
-    margin-bottom: 20px;
+    //margin-bottom: 20px;
   }
 
   // defaultStyling = "inside"
