--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -11,6 +11,7 @@ body {
   color: #333;
 }
 
+// example code blocks
 pre {
   background-color: #eee;
   padding: 10px;
@@ -18,6 +19,7 @@ pre {
   display: inline-block;
 }
 
+// general form styling
 input, button {
   height: 30px;
   margin: 0;
@@ -32,7 +34,6 @@ input, button {
     background-color: #eee;
   }
 }
-
 button {
   border: none;
   background-color: #E7E7E7;
@@ -43,11 +44,10 @@ button:hover {
   cursor: pointer;
 }
 
+// custom plugin styling
 .intl-tel-input {
   input {
     padding: 0 8px;
-    // add this for testing, as plugin should be able to cope
-    //margin-bottom: 20px;
   }
 
   // defaultStyling = "inside"
