--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -2,22 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example: defaultCountry</title>
+    <title>Example: <%- title %></title>
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="../build/css/intlTelInput.css">
     <link rel="stylesheet" href="../build/css/demo.css">
   </head>
 
   <body>
-    <h1>Example: defaultCountry</h1>
-    <p>Use IP address lookup to set the defaultCountry to the user's country</p>
+    <h1>Example: <%- title %></h1>
+    <p><%- desc %></p>
     
     <h2>Code</h2>
-    <pre><code class="language-javascript">$.get("http://ipinfo.io", function(response) {
-  $("input").intlTelInput({
-    defaultCountry: response.country.toLowerCase()
-  });
-}, "jsonp");</code></pre>
+    <pre><code class="language-javascript"><%- code %></code></pre>
 
     <h2>Result</h2>
     <input type="tel" placeholder="e.g. +1 702 123 4567">
@@ -26,11 +22,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../build/js/intlTelInput.js"></script>
     <script>
-      $.get("http://ipinfo.io", function(response) {
-  $("input").intlTelInput({
-    defaultCountry: response.country.toLowerCase()
-  });
-}, "jsonp");
+      <%- code %>
     </script>
   </body>
 </html>
