--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Example: <%= title %></title>
-    <link rel="stylesheet" href="css/prism.css">
-    <link rel="stylesheet" href="../build/css/intlTelInput.css">
-    <link rel="stylesheet" href="../build/css/demo.css">
-    <%- customHead %>
+    <link rel="stylesheet" href="../css/prism.css">
+    <link rel="stylesheet" href="../../build/css/intlTelInput.css">
+    <link rel="stylesheet" href="../../build/css/demo.css">
+    <% if (stylesheet) { %>
+      <link rel="stylesheet" href="../css/<%= stylesheet %>">
+    <% } %>
   </head>
 
   <body>
@@ -20,13 +22,13 @@
     <pre><code class="language-javascript"><%= code %></code></pre>
 
     <h2>Result</h2>
-    <%- markup %>
+    <div id="result">
+      <%- markup %>
+    </div>
 
-    <script src="js/prism.js"></script>
+    <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../build/js/intlTelInput.js"></script>
-    <script>
-      <%- code %>
-    </script>
+    <script src="../js/<%= script %>"></script>
   </body>
 </html>
