--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -28,7 +28,7 @@
 
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="../build/js/intlTelInput.js"></script>
+    <script src="../../build/js/intlTelInput.js"></script>
     <script src="../js/<%= script %>"></script>
   </body>
 </html>
