--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <a href="/intl-tel-input.html">Back</a>
     <h1>Example: <%= title %></h1>
     <p><%= desc %></p>
     
