--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -6,7 +6,7 @@ $greyBorder: #CCC;
 
 $flagHeight: 11px;
 $flagWidth: 16px;
-$flagPadding: 6px;
+$flagPadding: 8px;
 // this border width is used for the popup and divider, but it is also
 // assumed to be the border width of the input, which we do not control
 $borderWidth: 1px;
@@ -17,8 +17,8 @@ $triangleBorder: 3px;
 $arrowPadding: 4px;
 $arrowColor: #555;
 
-$inputPadding: 9px;
-$selectedFlagWidth: $flagWidth + (2 * $flagPadding) + $arrowWidth + $arrowPadding;
+$inputPadding: 6px;
+$selectedFlagWidth: $flagWidth + $flagPadding + $arrowWidth + (2 * $arrowPadding);
 
 .intl-tel-input {
   // need position on the container so the selected flag can be
