updated dev deps, remove grunt-bower, use generated spec runner for in-browser testing

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -1,3 +1,5 @@
+@import 'flags';
+
 // rgba is needed for the selected flag hover state to blend in with
 // the border-highlighting some browsers give the input on focus
 $hoverColor: rgba(0, 0, 0, 0.05);
