added error/success msg on validation example

--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -11,6 +11,10 @@ body {
   color: #555;
 }
 
+.hide {
+  display: none;
+}
+
 // example code blocks
 pre {
   margin: 0 !important; // override prism.css
@@ -47,11 +51,6 @@ input, button {
 input, select {
   border: 1px solid #CCC;
   width: 250px;
-}
-
-input.error {
-  background-color: #FFE7E7;
-  border: 1px solid #FF7C7C;
 }
 
 // borrowed from bootstrap
