--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -9,6 +9,19 @@
     <% if (stylesheet) { %>
       <link rel="stylesheet" href="../css/<%= stylesheet %>?<%= time %>">
     <% } %>
+
+    <!-- GOOGLE ANALYTICS -->
+    <script>
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-26178728-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <!-- /GOOGLE ANALYTICS -->
   </head>
 
   <body>
