fix montenegro flag

--- a/src/css/flags.scss
+++ b/src/css/flags.scss
@@ -138,7 +138,7 @@
   .ma {background-position: -192px -77px}
   .mc {background-position: -208px -77px}
   .md {background-position: -224px -77px}
-  .me {background-position: -240px -77px}
+  .me {background-position: -112px -154px; height: 12px;}
   .mg {background-position: 0 -88px}
   .mh {background-position: -16px -88px}
   .mk {background-position: -32px -88px}
