Display flag and country name in a separated field

--- a/src/css/flags.scss
+++ b/src/css/flags.scss
@@ -6,7 +6,7 @@
  * THEN: manually added .bq next to .nl
  * AND: .bl and .mf next to .fr
  */
-.intl-tel-input {
+.intl-tel-country-list {
   .flag {
     width: 16px;
     height: 11px;
