--- a/examples/partials/countrySync.html
+++ b/examples/partials/countrySync.html
@@ -1,6 +1,6 @@
 <div class="form-item">
   <label>Telephone number</label>
-  <input id="phone" type="tel" placeholder="e.g. +1 702 123 4567">
+  <input id="phone" type="tel" placeholder="+1 702-123-4567">
 </div>
 
 <div class="form-item">
