Added support for use with Bootstrap .form-control and .input-group
When applied to an input with the .form-control class, the .intl-tel-input wrapper element is decorated with the .form-control class as well. Stylesheet modifications ensure that the input matches the metrics and styling of its .form-control container.

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -181,4 +181,19 @@ $selectedFlagWidth: $flagWidth + $flagPadding + $arrowWidth + (2 * $arrowPadding
       margin-right: 6px;
     }
   }
+
+  // theme tweaks when coupled with bootstrap
+  &.form-control {
+    padding: 0;
+
+    // the input also has .form-control styling, so just account for the border and background
+    input, input[type=text], input[type=tel] {
+      background: transparent;
+
+      // the .intl-tel-input.form-control has a border; lay the border-box sized field over it
+      border: 0;
+      margin-top: -1px !important;
+      margin-left: -1px;
+    }
+  }
 }
