Revise flag scss descripition

--- a/src/css/flags.scss
+++ b/src/css/flags.scss
@@ -1,10 +1,5 @@
 /**
- * Custom download from http://flag-sprites.com/
- * Select FamFamFam flag icon set
- * Deselect: Mayotte, West Sahara, Netherlands Antilles, Pitcairn,
- * and everything from the "Other areas" section except British IOT
- * THEN: manually added .bq next to .nl
- * AND: .bl and .mf next to .fr
+ * Custom download from https://github.com/lipis/flag-icon-css
  */
 @import "sprite";
 
