--- a/src/css/flags.scss
+++ b/src/css/flags.scss
@@ -6,6 +6,7 @@
 .iti-flag {
   width: 16px;
   height: 12px;
+  outline: 1px solid #dfdfdf;
   background-image: url("../img/flags.png");
 
   @media
