switch from outline to box-shadow

--- a/src/css/flags.scss
+++ b/src/css/flags.scss
@@ -6,7 +6,7 @@
 .iti-flag {
   width: 18px;
   height: 13px;
-  outline: 1px solid #dfdfdf;
+  box-shadow: 0px 0px 1px 0px #888;
   background-image: url("../img/flags.png");
 }
 
